--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone:
 
 title: Grace Sampao # the main title
 
-tagline: Mathematics | Programming | Art # it will display as the subtitle
+tagline: From Architecture to Algorithms: Building a Future in Math, Art & AI. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Welcome to my personal portfolio and learning journal! I'm an architect by trade, currently bridging the gap into **Data Science and AI**. This space is dedicated to documenting my transition and projects, fueled by a passion for **mathematics**, **programming**, and **computational art**. Follow along as I self-study complex mathematical concepts and develop AI solutions. My goal is to secure my first role in the field, leveraging a unique blend of structural thinking and algorithmic problem-solving. **Ultimately, I aim to return to university to formally pursue mathematics.** Let's build something beautiful and intelligent!
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
