--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,7 @@ title: Grace Sampao # the main title
 tagline: From Architecture to Algorithms: Building a Future in Math, Art & AI. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Welcome to my personal portfolio and learning journal! I am an architect by trade, currently bridging the gap into **Data Science and AI**. This space is dedicated to documenting my transition and projects, fueled by a passion for **mathematics**, **programming**, and **computational art**. Follow along as I self-study complex mathematical concepts and develop AI solutions. My goal is to secure my first role in the field, leveraging a unique blend of structural thinking and algorithmic problem-solving. **Ultimately, I aim to return to university to formally pursue mathematics.** Let
-   us build something beautiful and intelligent!
+  Lorem ipsum
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
