--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone:
 
 title: Grace Sampao # the main title
 
-tagline: From Architecture to Algorithms: Building a Future in Math, Art & AI. # it will display as the subtitle
+tagline:  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Lorem ipsum
+  
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
