--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ timezone:
 title: Grace Sampao # the main title
 
 tagline:  # it will display as the subtitle
-  From Architecture to Algorithms: Building a future in Math, Art & AI.
+  From Architecture to Algorithms | Building a future in Math, Art & AI
+  
 description: >- # used by seo meta and the atom feed
   
 
