--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ timezone:
 
 title: Grace Sampao # the main title
 
-tagline: From Architecture to Algorithms | Building a future in Math, Art & AI # it will display as the subtitle
+tagline: # it will display as the subtitle
+  
   
 description: >- # used by seo meta and the atom feed
   
