--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github:
   username: nadupoy # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: grace_sampao # change to your Twitter username
 
 social:
   # Change to your full name.
